<resources>
    <string name="app_name">PE Terminologies</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="hint">Search word</string>
    <string name="loginDropDown">Login</string>
    <string name="registerDropDown">Register</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="addOrEditWord">Add Word</string>
    <string name="addOrEditMeaning">Add Meaning</string>
    <string name="addOrEditButton">Add or Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="suggest">Suggest Word</string>
    <string name="forgetUsername">Please enter your username</string>
    <string name="reset">Reset</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="otp">OTP</string>
    <string name="url">http://18.188.14.223:8080</string>
    <string name="aboutUsTitle">Contact Us</string>
    <string name="aboutUs">Mr. Yogesh P. Thakur (1987) B.A. , B.P.Ed., M.P.Ed. , M. Phill (Physical Education) is a well acknowledged physical educationist highly specialized in Research,Physiology , Sports Psychology and Management.</string>
    <string name="aboutUs1">He has published 2 paper\'s in National journals on Physical Education . He serving as an Junior Regional Manager for SHAPE SPORTS and FITNESS SOLUTIONS PVT.LTD. PUNE.</string>
    <string name="privacyPloicyTitle">Privacy Policy</string>
    <string name="privacyPolicy">Yogesh P. Thakur operates the www.physicaleducationterminolgyandshortnotes.com, which provides educational services. It includes the series of comprehensive notes and vocabulary regarding physical education. This will be helpful to crack various exams like UGC - NET / JRF / SET Exam easily.</string>
    <string name="privacyPolicy1">This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
            If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
            The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at , unless otherwise defined in this Privacy Policy.</string>
    <string name="privacyPolicy2">Information Collection and Use : For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to your name, phone number, and postal address. The information that we collect will be used to contact or identify you.</string>
    <string name="privacyPOlicy3">Service Providers: We may employ third-party companies and individuals due to the following reasons:
            1.To facilitate our Service.
            2.To provide the Service on our behalf.
            3.To perform Service-related services; or
            4.To assist us in analyzing how our Service is used
    </string>
    <string name="privacyPolicy4">We want to inform our Service users that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="privacyPolicy5">Security: We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="privacyPolicy6">Contact Us: If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at  t2thakur123@gmail.com.</string>
    <string name="refundPolicyTitle">Refund Policy</string>
    <string name="termsAndConDnditionsTitle">Terms and Conditions</string>
    <string name="terms">Introduction: These terms and conditions shall govern your use of our website.
                1. By using our website, you accept these terms and conditions in full; accordingly, if you disagree with these terms and conditions or any part of these terms and conditions, you must not use our website.
                2.If you [register with our website, submit any material to our website or use any of our website services], we will ask you to expressly agree to these terms and conditions.
                3.You must be at least [18] years of age to use our website; by using our website or agreeing to these terms and conditions, you warrant and represent to us that you are at least [18] years of age.
                4.Our website uses cookies; by using our website or agreeing to these terms and conditions, you consent to our use of cookies in accordance with the terms of our [privacy and cookies policy].</string>
    <string name="terms1">Licence to use APP:
                            1.view pages from our website in a web browser;
                            2.download pages from our website for caching in a web browser;
                            3.print pages from our website;
                            4.[stream audio and video files from our website]; and
        5.[use [our website services] by means of a web browser], subject to the other provisions of these terms and conditions.</string>
    <string name="terms2">Except as expressly permitted BY THE  provisions of these terms and conditions, you must not download any material from our website or save any such material to your computer. You may only use our website for [your own personal and business purposes], and you must not use our website for any other purposes. Except as expressly permitted by these terms and conditions, you must not edit or otherwise modify any material on our website. Unless you own or control the relevant rights in the material, you must not:
                1.republish material from our website (including republication on another website);
                2.sell, rent or sub-license material from our website
                3.show any material from our website in public;
                4.exploit material from our website for a commercial purpose; or
                5.redistribute material from our website.</string>
    <string name="terms3">Acceptable use : use our app in any way or take any action that causes, or may cause, damage to the website or impairment of the performance, availability or accessibility of the website; use our app in any way that is unlawful, illegal, fraudulent or harmful, or in connection with any unlawful, illegal, fraudulent or harmful purpose or activity;use our app to copy, store, host, transmit, send, use, publish or distribute any material which consists of (or is linked to) any spyware, computer virus, Trojan horse, worm, keystroke logger, rootkit or other malicious computer software;[conduct any systematic or automated data collection activities (including without limitation scraping, data mining, data extraction and data harvesting) on or in relation to our website without our express written consent]; [access or otherwise interact with our website using any robot, spider or other automated means[, except for the purpose of [search engine indexing]]];[violate the directives set out in the robots.txt file for our website]; or [use data collected from our website for any direct marketing activity (including without limitation email marketing, SMS marketing, telemarketing and direct mailing)]. You must not use data collected from our website to contact individuals, companies or other persons or entitie. You must ensure that all the information you supply to us through our website, or in relation to our website, is [true, accurate, current, complete and non-misleading].</string>
    <string name="terms4">Registration and accounts : You may register for an account with our app by [completing and submitting the account registration form on our website, and clicking on the verification link in the email that the website will send to you]. You must not allow any other person to use your account to access the app. You must notify us in writing immediately if you become aware of any unauthorised use of your account. You must not use any other persons account to access the website[, unless you have that persons express permission to do so].</string>
    <string name="terms5">User login details : If you register for an account with our website, [we will provide you with] OR [you will be asked to choose] [a user ID and password]. Your user ID must not be liable to mislead; you must not use your account or user ID for or in connection with the impersonation of any person. You must keep your password confidential. You must notify us in writing immediately if you become aware of any disclosure of your password. You are responsible for any activity on our website arising out of any failure to keep your password confidential, and may be held liable for any losses arising out of such a failure.</string>
    <string name="terms6">Content licence : In these terms and conditions, "your content" means [all works and materials (including without limitation text, graphics, images, audio material, video material, audio-visual material, scripts, software and files) that you submit to us or our website for storage or publication on, processing by, or transmission via, our website]. You grant to us a [worldwide, irrevocable, non-exclusive, royalty-free licence] to [use, reproduce, store, adapt, publish, translate and distribute your content in any existing or future media] OR [reproduce, store and publish your content on and in relation to this website and any successor website] OR [reproduce, store and, with your specific consent, publish your content on and in relation to this app]. You hereby waive all your moral rights in your content to the maximum extent permitted by applicable law; and you warrant and represent that all other moral rights in your content have been waived to the maximum extent permitted by applicable law. You may edit your content to the extent permitted using the editing functionality made available on our website. Without prejudice to our other rights under these terms and conditions, if you breach any provision of these terms and conditions in any way, or if we reasonably suspect that you have breached these terms and conditions in any way, we may delete, unpublish or edit any or all of your content.</string>
    <string name="paymentMessage">To get premium set of words you have to pay Rs 120/-(Inclusive of GST) and subscribe</string>
    <string name="paymentOptions1">You can pay Rs 120/- through paytm to get premium set of words. After paying take screenshot and send it to following email to get your login credentials from admin</string>
    <string name="paymentOptions2">Ph No. : 9145425885</string>
    <string name="paymentOptions3">Email : t2thakur@gmail.com</string>
    <string name="paymentOptions">Payment Options</string>
</resources>