<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/loginDropDown" android:title="@string/loginDropDown" />
    <item android:title="@string/registerDropDown" android:id="@+id/registerDropdown" />
    <item android:id="@+id/aboutUsDropDown" android:title="@string/aboutUsTitle" />
    <item android:id="@+id/privacyPolicyDropDown" android:title="@string/privacyPloicyTitle"/>
    <item android:id="@+id/refundPolicyDropDown" android:title="@string/refundPolicyTitle" />
    <item android:id="@+id/termsAndConditionsDropDown" android:title="@string/termsAndConDnditionsTitle" />
    <item android:id="@+id/paymentOptionsDropDown" android:title="@string/paymentOptions" />

    <item android:id="@+id/search"
        android:title="search"
        android:icon="@drawable/magnify"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>