<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/aboutUsDropDown" android:title="@string/aboutUsTitle" />
    <item android:id="@+id/privacyPolicyDropDown" android:title="@string/privacyPloicyTitle"/>
    <item android:id="@+id/refundPolicyDropDown" android:title="@string/refundPolicyTitle" />
    <item android:id="@+id/termsAndConditionsDropDown" android:title="@string/termsAndConDnditionsTitle" />
    <item android:id="@+id/logoutDropDown" android:title="@string/logout" />
    <item android:id="@+id/searchPremium"
        android:title="search"
        android:icon="@drawable/magnify"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>