<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndCondtions">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/termsAndConditionsCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:isScrollContainer="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTermsAndConditions">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linearLayoutTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:layout_margin="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms1"
                    android:layout_margin="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms2"
                    android:layout_margin="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms3"
                    android:layout_margin="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms4"
                    android:layout_margin="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms5"
                    android:layout_margin="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/termsAndConditions6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms6"
                    android:layout_margin="8dp"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>