<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.indiasguru.dictionary.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarPaymentOptions"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/aboutUsCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAboutUs">

        <LinearLayout
            android:id="@+id/linearLayoutPaymentOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/paymentOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentOptions1"
                android:layout_margin="8dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/aboutUsText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentOptions2"
                android:layout_margin="8dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/aboutUsText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentOptions3"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>